--- a/src/styles.css
+++ b/src/styles.css
@@ -91,7 +91,7 @@ footer {
     padding: 25px;
     bottom: 0;
     color: black;
-    width: 100%;
+    max-width: 100%;
     align-items: center;
     justify-content: center;
 }
