--- a/src/styles.css
+++ b/src/styles.css
@@ -5,14 +5,27 @@ html {
     background-size: cover;
     padding: 0%;
     margin: 0%;
-    
+   
     font-family: "Titillium Web", sans-serif;
     font-weight: 200;
     font-style: normal;
 }
 
+
+.time {
+    color: white;
+    padding: 5px;
+}
+
+
+.date {
+    color: white;
+    padding: 5px;
+}
+
+
 body {
-    
+   
     padding: 0%;
     margin: 0%;
 }
@@ -36,10 +49,12 @@ li {
     text-decoration: none;
   }
 
+
   .nav a:hover {
     background-color: #ddd;
     color: black;
   }
+
 
 /*Weather details*/
 .temp {
@@ -50,6 +65,8 @@ li {
     border-radius: 5px;
     text-align: center;
 }
+
+
 
 
 .detail_table {
@@ -68,7 +85,10 @@ li {
 }
 
 
+
+
 /*Footer*/
+
 
 footer {
     background-color: antiquewhite;
@@ -76,7 +96,9 @@ footer {
     margin: 0% ;
 }
 
+
 /*advertissment*/
+
 
 .ads {
     background-color: green;
@@ -84,7 +106,9 @@ footer {
     height: 50px;
     margin: auto;
 
+
 }
+
 
 /*Forecast*/
 .future-forecast {
@@ -97,9 +121,12 @@ footer {
 }
 
 
+
+
 .future-forecast .weather-forecast {
     display: flex;
 }
+
 
 .weather-forecast .weather-forecast-item {
     display: flex;
@@ -112,6 +139,7 @@ footer {
     padding: 15px;
 }
 
+
 .weather-forecast .weather-forecast-item .day {
     padding: 5px 15px;
     background: #A7AFCE;
@@ -119,7 +147,9 @@ footer {
     text-align: center;
 }
 
+
 /*Mobile Format*/
+
 
 @media only screen and (max-width:730px){
     .future-forecast {
